# Banking_Software

./: .gitignore  .gitignote  .gitmodules  README.md  deploy.sh  package-lock.json  team6bank_node.service
DeliverableDocuments/: SprintCharts.xlsx
backend/: accountNumbersSeed.js  index.js  package-lock.json  package.json  seed.js
backend/config/: default.json
backend/models/: AccountNumber.json  accountNumbers.js  futureTransactions.js  pastTransactions.js  user.js
backend/routes/: auth.js  transactions.js  users.js
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  config.json  index.css
frontend/src/components/: Login.jsx  adminSettings.jsx  closeAccount.jsx  createAccount.jsx  futureTransactions.jsx  futureTransactionsTable.jsx  home.jsx  logout.jsx  manualTransfer.jsx  navBar.jsx  newTransfer.jsx  pastTransactions.jsx  pastTransactionsTable.jsx  sideBar.jsx  transfer.jsx  userAccount.jsx  userSettings.jsx  userTransactions.jsx
frontend/src/components/common/: Input.jsx  ListItemNavBar.jsx  ListItemSideBar.jsx  Select.jsx  adminRoute.jsx  form.jsx  pagination.jsx  searchBox.jsx  selectWithoutBlankOption.jsx  tableBody.jsx  userRoute.jsx
frontend/src/services/: authService.js  userService.js
frontend/src/styles/: navbar.css  sidebar.css
server/: CMakeLists.txt
server/backend/: CMakeLists.txt  log.cpp  log.h  main.cpp  server.cpp
server/backend/src/: CMakeLists.txt  error.h  main.cpp  server.h
server/config/: log.json
server/liblog/: CMakeLists.txt  log.cpp  log.h
server/logger/: CMakeLists.txt  logmonitor.cpp  logmonitor.h  main.cpp
server/task_scheduler/: CMakeLists.txt
web-client/: loader-test.html
web-client/backend/: devutils.js  redirect.js  user_services.js
web-client/dev_site/: home.html  login.html  password_reset.html
